Minikube/Deployment/apache-tomcat/tomcat-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      containers:
      - name: tomcat
        image: tomcat:9.0
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: tomcat-root
          mountPath: /usr/local/tomcat/webapps/ROOT.war
          subPath: sample.war
      volumes:
      - name: tomcat-root
        configMap:
          name: tomcat-root
