Minikube/Deployment/apache-tomcat/tomcat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-service
spec:
  selector:
    app: tomcat
  ports:
    - protocol: TCP
      port: 81
      targetPort: 8080
  type: ClusterIP
